--- a/links.yml
+++ b/links.yml
@@ -3,13 +3,13 @@
 ## 网址导航页面配置
 ################
 # 网站标题
-title: GenEasy 网址导航
+title: Sohotools
 # 网站 LOGO（可选）
 # logo: https://webstack.cc/assets/images/logo@2x.png
 # 网址导航页面关键字（可选）
-keywords: 网址导航,网站导航,上网导航,网址大全,常用网站,推荐网站,个人导航,个人书签,个人主页,hao123上网导航,hao123导航,hao123网址大全,GenEasy,Github,Github Pages,SSG
+keywords: 外贸人常用工具大全，FOB计算器，关税计算器，每日汇率查询，运单查询，外贸常用表格模板，翻译
 # 网址导航页面描述（可选）
-description: 网址导航静态页面通用模板。
+description: 一站式集齐常用外贸工具，持续更新中
 # 网址导航页面 URL（可选）
 url: https://geneasy.github.io/nav/
 # Favicon（可选）
